added ispc/ifort_sources with COMPILE/LINK_FLAGS

--- a/Dwarfs/4_Nbody/hermite4/CMakeLists.txt
+++ b/Dwarfs/4_Nbody/hermite4/CMakeLists.txt
@@ -23,10 +23,9 @@ endif()
 
 if (${ICPC_FOUND})
   clone_source(openmp.cpp openmp_icc.cpp)
-  set_property(SOURCE openmp_icc.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " -openmp")
-  icpc_source(openmp_icc.cpp)
-  icpc_add_executable(openmp_icc openmp_icc.cpp)
-  set_target_properties(openmp_icc PROPERTIES LINK_FLAGS "-openmp")
+  #  set_property(SOURCE openmp_icc.cpp APPEND_STRING PROPERTY COMPILE_FLAGS "  -openmp -Wall -Werror")
+  icpc_sources(openmp_icc.cpp COMPILE_FLAGS " -openmp -Wall -Werror")
+  icpc_add_executable(openmp_icc openmp_icc.cpp LINK_FLAGS "-openmp")
   #  add_custom_command(
   #  TARGET openmp_icc
   #  POST_BUILD
@@ -36,7 +35,7 @@ if (${ICPC_FOUND})
 endif()
 
 if (${IFORT_FOUND})
-  ifort_source(openmp.f90)
-  ifort_add_executable(openmp_f90 openmp.f90)
+  ifort_sources(openmp.f90 COMPILE_FLAGS "-openmp")
+  ifort_add_executable(openmp_f90 openmp.f90 LINK_FLAGS "-openmp")
 endif()
 
