--- a/Dwarfs/4_Nbody/hermite4/CMakeLists.txt
+++ b/Dwarfs/4_Nbody/hermite4/CMakeLists.txt
@@ -14,14 +14,14 @@ add_executable(serial serial.cpp)
 
 find_package(IntelCompilers QUIET)
 
-if (${OPENMP_FOUND})
+if (OPENMP_FOUND)
   #set_source_files_properties(openmp.cpp PROPERTIES COMPILE_FLAGS "${OpenMP_CXX_FLAGS}")
   set_property(SOURCE openmp.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " ${OpenMP_CXX_FLAGS}")
   add_executable(openmp openmp.cpp)
   set_target_properties(openmp PROPERTIES LINK_FLAGS "${OpenMP_CXX_FLAGS}")
 endif()
 
-if (${ICPC_FOUND})
+if (ICPC_FOUND)
   clone_source(openmp.cpp openmp_icc.cpp)
   #  set_property(SOURCE openmp_icc.cpp APPEND_STRING PROPERTY COMPILE_FLAGS "  -openmp -Wall -Werror")
   icpc_sources(openmp_icc.cpp COMPILE_FLAGS " -openmp -Wall -Werror")
@@ -34,7 +34,7 @@ if (${ICPC_FOUND})
   #  )
 endif()
 
-if (${IFORT_FOUND})
+if (IFORT_FOUND)
   ifort_sources(openmp.f90 COMPILE_FLAGS "-openmp")
   ifort_add_executable(openmp_f90 openmp.f90 LINK_FLAGS "-openmp")
 endif()
