--- a/Dwarfs/4_Nbody/hermite4/CMakeLists.txt
+++ b/Dwarfs/4_Nbody/hermite4/CMakeLists.txt
@@ -3,98 +3,55 @@ project(Hermite4 NONE)
 
 enable_language(CXX)
 
-#include(CheckCXXCompilerFlag)
-#CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
-if (NOT CMAKE_CXX11_COMPILE_FEATURES)
-  message(STATUS "-- C++11 is not supported by compiler. Ingoring \"hermite4\"  example")
-else()
-  add_definitions(${CMAKE_CXX11_STANDARD_COMPILE_OPTION})
+include(CheckCXXCompilerFlag)
+CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
+set(CXX11 ${COMPILER_SUPPORTS_CXX11})
+set(CXX11_FLAGS -std=c++11)
+
+if (NOT CXX11)
+  message(WARNING "*** C++11 is not supported by compiler. Ingoring \"hermite4\"  example")
+else (NOT CXX11)
+  add_definitions(${CXX11_FLAGS} -Wall -Werror)
   add_executable(hermite4_serial hermite4_serial.cpp)
-endif()
+  
+  find_package(OpenMP QUIET)
 
+  if (NOT ${OPENMP_FOUND})
+    message(WARNING "*** OpenMP is not support by compiler. Ignoring \"hermite4\" OpenMP examples")
+  else (NOT ${OPENMP_FOUND})
 
-#if (True)
-#  add_custom_command(
-#    OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/serial.o
-#    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/serial.cpp
-#    COMMAND g++ -std=c++11 -o ${CMAKE_CURRENT_BINARY_DIR}/serial.o    -I${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/serial.cpp -c
-#    COMMENT "Build CXX object ${CMAKE_CURRENT_BINARY_DIR}/serial.o"
-#    )
-#  add_custom_target(
-#    my_serial ALL
-#    DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/serial.o
-#    COMMAND g++ -o my_serial ${CMAKE_CURRENT_BINARY_DIR}/serial.o
-#    COMMENT "Linking CXX object my_serial")
-#endif()
+    # Build OpenMP example
+    set_property(SOURCE hermite4_omp.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " ${OpenMP_CXX_FLAGS}")
+    add_executable(hermite4_omp hermite4_omp.cpp)
+    set_target_properties(hermite4_omp PROPERTIES LINK_FLAGS "${OpenMP_CXX_FLAGS}")
+  
+    find_package(ISPC QUIET)
+    if (${ISPC_FOUND})
 
+      # Build ISPC example
+      set (ispc_obj "")
+      if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
+        ispc_compile(ispc_obj ispc/hermite4.ispc COMPILE_FLAGS "-O2 --opt=fast-math --math-lib=svml")
+      else()
+        ispc_compile(ispc_obj ispc/hermite4.ispc COMPILE_FLAGS "-O2 --opt=fast-math")
+      endif()
+      set_property(SOURCE ispc/hermite4.cpp    APPEND_STRING PROPERTY COMPILE_FLAGS " ${OpenMP_CXX_FLAGS}")
+      set_property(SOURCE ispc/omp_tasksys.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " ${OpenMP_CXX_FLAGS}")
 
-#if (OPENMP_FOUND)
-#  #set_source_files_properties(openmp.cpp PROPERTIES COMPILE_FLAGS "${OpenMP_CXX_FLAGS}")
-#  set_property(SOURCE openmp.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " ${OpenMP_CXX_FLAGS}")
-#  add_executable(openmp openmp.cpp)
-#  set_target_properties(openmp PROPERTIES LINK_FLAGS "${OpenMP_CXX_FLAGS}")
-#endif()
+      add_executable(hermite4_ispc
+        ${ispc_obj} 
+        ispc/typeReal.h
+        ispc/hermite4.ispc
+        ispc/hermite4.cpp 
+        ispc/omp_tasksys.cpp)
 
-# Locate IntelCompilers if available
-#find_package(IntelCompilers QUIET)
+      set_target_properties(hermite4_ispc PROPERTIES LINK_FLAGS "${OpenMP_CXX_FLAGS}")
+    else()
+      message(WARNING "*** ISPC is not found. Ignoring  \"hermite4\" ISPC example")
+    endif()
 
-#if found Intel C++ compiler ,build C++ example
-#if (ICPC_FOUND)
-#  clone_source(openmp.cpp openmp_icc.cpp)
-#  icpc_sources(openmp_icc.cpp COMPILE_FLAGS " -openmp -Wall -Werror")
-#  icpc_add_executable(openmp_icc openmp_icc.cpp LINK_FLAGS "-openmp")
-#endif()
+  endif (NOT ${OPENMP_FOUND})
 
-#if found Intel Fortran compiler, build fortran example
-#if (IFORT_FOUND)
-#  ifort_sources(openmp.f90 COMPILE_FLAGS "-openmp")
-#  ifort_add_executable(openmp_f90 openmp.f90 LINK_FLAGS "-openmp")
-#endif()
+endif (NOT CXX11)
 
-
-# Attempt localte ISPC compiler
-#find_package(ISPC)
-
-# if found, build ISPC Example
-# if (ISPC_FOUND)
-#   set(ispc_obj "")
-#  ispc_compile(ispc_obj ispc/hermite4.ispc COMPILE_FLAGS "-O2")
-#  include_directories("util")
-
-#  if (True)
-#    icpc_sources(
-#      ispc/omp_tasksys.cpp
-#      ispc/hermite4.cpp
-#      COMPILE_FLAGS "-O3 -g -openmp")
-#    #  add_definitions("-fopenmp")
-#    icpc_add_executable(hermite4_ispc 
-#      ${ispc_obj}
-#      ispc/hermite4.ispc
-#      ispc/hermite4.cpp
-#      ispc/omp_tasksys.cpp
-#      LINK_FLAGS "-openmp")
-#  else()
-#    add_definitions("-fopenmp")
-#    add_executable(hermite4_ispc 
-#      ${ispc_obj}
-#      ispc/hermite4.ispc
-#      ispc/hermite4.cpp
-#      ispc/omp_tasksys.cpp)
-#    set_target_properties(hermite4_ispc PROPERTIES LINK_FLAGS "${OpenMP_CXX_FLAGS}")
-#    #    set(path
-#    #  ${CMAKE_CURRENT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/hermite4_ispc.dir)
-#  #  set(ispc_path
-#  #  ${CMAKE_CURRENT_BINARY_DIR}/ispc)
-#  #  message("path= ${path}")
-#  #  add_custom_command(
-#  #  TARGET hermite4_ispc
-#  #  PRE_LINK
-#  #  COMMAND g++ -o hermite4_ispc.x    ${ispc_path}/hermite4.dev.o    ${path}/ispc/hermite4.cpp.o    ${path}/ispc/omp_tasksys.cpp.o    -fopenmp
-#  #  DEPENDS  ${ispc_path}/hermite4.dev.o   ${path}/ispc/hermite4.cpp.o  ${path}/ispc/omp_tasksys.cpp.o  
-#  #  COMMENT "Pre_link command")
-#  endif()
-# ndif()
-# 
-# if (ISPC_FOUND AND XEONPHI_FOUND)
-# endif()
 
