added cmake files

--- a/Dwarfs/4_Nbody/CMakeLists.txt
+++ b/Dwarfs/4_Nbody/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.10 FATAL_ERROR)
 project(4_NBody NONE)
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake" "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules")
+include(common.cmake)
 
 add_subdirectory(hermite4)
 #add_subdirectory(bhtree)
