--- a/Patterns/CMakeLists.txt
+++ b/Patterns/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.10 FATAL_ERROR)
 project(Patterns CXX)
 
-set(FLAGS "-O3 -std=c++1y -Wall -Werror")
+set(FLAGS "-O3 -std=c++14 -Wall -Werror")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${FLAGS}")
 include_directories("../include")
 
@@ -9,4 +9,5 @@ add_executable(copy-and-swap copy-and-swap.cpp)
 add_executable(singleton singleton.cpp)
 add_executable(multiple_factories multiple_factories.cpp)
 add_executable(type_erasure type_erasure.cpp)
+add_executable(type_erasure_with_type_index type_erasure_with_type_index.cpp)
 
