+added std=c++11 Wall Werror

--- a/Dwarfs/1_STL/CMakeLists.txt
+++ b/Dwarfs/1_STL/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.0)
 project(1_STL)
 
+add_definitions(-std=c++11 -Wall -Werror)
 add_executable(weld_vtx weld_vtx.cpp)
 
